After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 153146 - crash on adding a series to a radar plot
crash on adding a series to a radar plot
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
git master
Other Linux
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-20 14:00 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2004-09-20 14:00:28 UTC
When you attempt to add a series to radar plot, gnumeric crashes

1) new gnumeric
2) make a radar plot
3) add a series
=> crash

gdb gives:
Program received signal SIGSEGV, Segmentation fault.

Thread 1092934432 (LWP 4641)

  • #0 go_data_vector_get_values
    at go-data.c line 273
  • #1 gog_radar_view_render
    at gog-radar.c line 348
  • #2 gog_view_render
    at gog-view.c line 488
  • #3 gog_view_render_real
    at gog-view.c line 307
  • #4 gog_outlined_view_render
    at gog-outlined-object.c line 148
  • #5 gog_view_render
    at gog-view.c line 488
  • #6 gog_view_render_real
    at gog-view.c line 307
  • #7 gog_outlined_view_render
    at gog-outlined-object.c line 148
  • #8 gog_view_render
    at gog-view.c line 492
  • #9 gog_renderer_pixbuf_update
    at gog-renderer-pixbuf.c line 807
  • #10 gog_control_foocanvas_update
    at gog-control-foocanvas.c line 199
  • #11 foo_canvas_item_invoke_update
    at foo-canvas.c line 433
  • #12 foo_canvas_group_update
    at foo-canvas.c line 1383
  • #13 foo_canvas_item_invoke_update
    at foo-canvas.c line 433
  • #14 do_update
    at foo-canvas.c line 2926
  • #15 idle_handler
    at foo-canvas.c line 2961
  • #16 g_child_watch_add
    from /usr/lib/libglib-2.0.so.0
  • #17 ??
  • #18 ??
  • #19 ??
    from /usr/lib/libglib-2.0.so.0
  • #20 ??
    from /usr/lib/libglib-2.0.so.0
  • #21 ??
  • #22 ??
    from /usr/lib/libglib-2.0.so.0
  • #23 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #24 pthread_mutex_lock
    from /lib/tls/libpthread.so.0
  • #25 ??
    from /usr/lib/libglib-2.0.so.0
  • #26 ??
  • #27 ??
  • #28 ??
  • #29 g_main_context_acquire
    from /usr/lib/libglib-2.0.so.0
  • #30 ??
  • #31 ??
  • #32 ??
  • #33 ??
  • #34 ??
  • #35 ??
  • #36 __after_morecore_hook
    from /lib/tls/libc.so.6
  • #37 ??
    from /usr/lib/libglib-2.0.so.0
  • #38 ??
  • #39 ??
  • #40 ??
  • #41 fts_safe_changedir
    from /lib/tls/libc.so.6


--adrian
Comment 1 Emmanuel Pacaud 2004-09-20 14:22:28 UTC
Fixed in CVS.